--- a/project/index.html
+++ b/project/index.html
@@ -90,7 +90,7 @@
 
     <div class="folder folder-collapsed">
         <h2 class="folder-heading">
-            <img src="http://filebrowser.magiccms.org/img/NET.png" height="30" />
+            <img src="http://blog.tech-fellow.net/content/images/2015/08/nuget.png" width="30" height="30" />
             <a href="/project/dev">.NET libraries/packages</a>
             <span class="glyphicon folder-switch"></span>
         </h2>
@@ -201,5 +201,6 @@
         ga('create', 'UA-12031460-1', 'auto');
         ga('send', 'pageview');
     </script>
+    
 </body>
 </html>
