--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
 
             <ul>
                     <li>
+                        <a href="/project/cms/is4wfw">is4wfw</a>
+                    </li>
+                    <li>
                         <a href="/project/dev/neptuo">Neptuo</a>
                     </li>
                     <li>
@@ -132,9 +135,6 @@
                     </li>
                     <li>
                         <a href="/project/dev/neptuo.formatters">Neptuo.Formatters</a>
-                    </li>
-                    <li>
-                        <a href="/project/dev/neptuo.formatters.composite">Neptuo.Formatters.Composite</a>
                     </li>
             </ul>
     </div>
