--- a/project/vsix/index.html
+++ b/project/vsix/index.html
@@ -2,23 +2,35 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Apps, libraries, tools &amp; utilities that helps during development and every day life. - Neptuo</title>
+    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <link href="/Content/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="/Content/bootstrap/bootstrap-theme.min.css" rel="stylesheet" />
-    <link href="/Content/common.css" rel="stylesheet" />
-    <link href="/Content/design.css" rel="stylesheet" />
-    <link href="/Content/responsivness.css" rel="stylesheet" />
-    <link href="/Content/syntax.css" rel="stylesheet" />
+    <title>Apps, libraries, tools &amp; utilities that helps during development and every day life. - Neptuo</title>
+    <link href="/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="/Content/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="/Content/web.css" rel="stylesheet" />
 </head>
 <body>
 
     <nav class="navbar navbar-fixed-top" role="navigation">
         <div class="container">
-            <a class="navbar-brand" href="/">
-                <img src="/Content/Images/Logo.png" alt="Neptuo logo" height="80" />
-            </a>
-            <ul>
+            <button class="navbar-toggle">
+                <span class="glyphicon glyphicon-menu-hamburger"></span>
+            </button>
+
+            <ul class="left">
+                    <li>
+        <a href="/">
+            <div class="maintext">
+                Home
+                <span class="glyphicon glyphicon-home"></span>
+            </div>
+            <div class="subtext">How can we help you?</div>
+        </a>
+    </li>
+
+            </ul>
+            <ul class="right">
                     <li class="active">
         <a href="/project">
             <div class="maintext">
@@ -80,7 +92,7 @@
                         <li>A set of productivity features: Line duplication, cancel build on first error, build times or show start page after solution closed. All configurable.</li>
 
                         <li>
-                            <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0">Licensed under Apache License, Version 2.0.</a>
+                            <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0"><span>Licensed under Apache License, Version 2.0.</span></a>
                         </li>
 
                         <li>
@@ -89,8 +101,8 @@
 
                         <li>
                             Source code at
-                            <a target="_blank" href="https://github.com/neptuo/Productivity">
-https://github.com/neptuo/Productivity</a>.
+                            <a target="_blank" href="https://github.com/neptuo/Productivity"><span>
+https://github.com/neptuo/Productivity</span></a>.
                         </li>
                     
 
@@ -131,6 +143,14 @@ https://github.com/neptuo/Productivity</a>.
         for (var i = 0; i < switchers.length; i++) {
             var switcher = switchers[i];
             switcher.addEventListener('click', onSwitcherClicked);
+        }
+
+        var navbarToggle = document.querySelector("button.navbar-toggle");
+        if (navbarToggle != null) {
+            navbarToggle.addEventListener('click', function (e) {
+                var navbar = document.querySelector("nav");
+                navbar.classList.toggle('navbar-expanded');
+            });
         }
 
     </script>
