Add link to atom to all pages. Local and web Gabrioal.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
 <head>
@@ -9,6 +10,8 @@
     <link href="/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="/Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="/Content/web.css" rel="stylesheet" />
+
+    <link rel="alternate" type="application/rss+xml" title="Neptuo Blog" href="http://www.neptuo.com/blog/atom.xml" />
 </head>
 <body>
 
@@ -125,6 +128,9 @@
                         <a href="/project/dev/neptuo">Neptuo</a>
                     </li>
                     <li>
+                        <a href="/project/dev/neptuo.aspnet.navigation">Neptuo.AspNet.Navigation</a>
+                    </li>
+                    <li>
                         <a href="/project/dev/neptuo.commands">Neptuo.Commands</a>
                     </li>
                     <li>
@@ -144,9 +150,6 @@
                     </li>
                     <li>
                         <a href="/project/dev/neptuo.exceptions">Neptuo.Exceptions</a>
-                    </li>
-                    <li>
-                        <a href="/project/dev/neptuo.formatters">Neptuo.Formatters</a>
                     </li>
             </ul>
     </div>
