--- a/project/universal/index.html
+++ b/project/universal/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
 <head>
@@ -9,6 +10,8 @@
     <link href="/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="/Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="/Content/web.css" rel="stylesheet" />
+
+    <link rel="alternate" type="application/rss+xml" title="Neptuo Blog" href="http://www.neptuo.com/blog/atom.xml" />
 </head>
 <body>
 
@@ -88,9 +91,7 @@
             </h2>
             <article>
                 <ul>
-                        <li>
-      Client-server HTTP based application for taking photos and downloading them from the server with WebCam to the clients.
-    </li>
+                        <li>Client-server HTTP based application for taking photos and downloading them from the server with WebCam to the clients.</li>
 
 
 
