--- a/project/desktop/index.html
+++ b/project/desktop/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
 <head>
@@ -9,6 +10,8 @@
     <link href="/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="/Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="/Content/web.css" rel="stylesheet" />
+
+    <link rel="alternate" type="application/rss+xml" title="Neptuo Blog" href="http://www.neptuo.com/blog/atom.xml" />
 </head>
 <body>
 
@@ -89,9 +92,7 @@
             </h2>
             <article>
                 <ul>
-                        <li>
-      Keyboard-only designed application for simple and fast opening of Visual Studio solution files. 
-    </li>
+                        <li>Keyboard-only designed application for simple and fast opening of Visual Studio solution files.</li>
 
 
 
