--- a/project/dev/index.html
+++ b/project/dev/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
 <head>
@@ -9,6 +10,8 @@
     <link href="/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="/Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="/Content/web.css" rel="stylesheet" />
+
+    <link rel="alternate" type="application/rss+xml" title="Neptuo Blog" href="http://www.neptuo.com/blog/atom.xml" />
 </head>
 <body>
 
@@ -80,7 +83,7 @@
 </div>
 
 <div class="container">
-        <input id="search" type="text" class="folder" placeholder="Search (13) projects..." />
+        <input id="search" type="text" class="folder" placeholder="Search (14) projects..." />
 
         <div class="folder" data-search="neptuo">
             <h2 class="folder-heading">
@@ -109,6 +112,35 @@ github.com/neptuo/Framework</span></a>.
 
                         <li>
                             Current version on NuGet at <a target="_blank" href="https://www.nuget.org/packages/Neptuo"><span>nuget.org/packages/Neptuo</span></a>.
+                        </li>
+                </ul>
+            </article>
+            <div class="clear"></div>
+        </div>
+        <div class="folder" data-search="neptuo.aspnet.navigation">
+            <h2 class="folder-heading">
+                    <img src="http://robertmjordan.com/Content/theme/img/technologies/nuget-icon.png" class="folder-icon" />
+
+                <a href="/project/dev/neptuo.aspnet.navigation">Neptuo.AspNet.Navigation</a>
+            </h2>
+            <article>
+                <ul>
+                        <li>Model (class) based navigation and routing for ASP.NET MVC.</li>
+
+                        <li>
+                            <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0"><span>Licensed under Apache License, Version 2.0.</span></a>
+                        </li>
+
+
+                        <li>
+                            Source code at
+                            <a target="_blank" href="https://github.com/neptuo/AspNet.Navigation"><span>
+https://github.com/neptuo/AspNet.Navigation</span></a>.
+                        </li>
+                    
+
+                        <li>
+                            Current version on NuGet at <a target="_blank" href="https://www.nuget.org/packages/Neptuo.AspNet.Navigation"><span>nuget.org/packages/Neptuo.AspNet.Navigation</span></a>.
                         </li>
                 </ul>
             </article>
