--- a/project/dev/neptuo.aspnet.navigation/index.html
+++ b/project/dev/neptuo.aspnet.navigation/index.html
@@ -83,156 +83,38 @@
 </div>
 
 <div class="container">
-        <input id="search" type="text" class="folder" placeholder="Search (2) projects..." />
 
-        <div class="folder" data-search="is4wfw">
+        <div class="folder" data-search="neptuo.aspnet.navigation">
             <h2 class="folder-heading">
+                    <img src="http://robertmjordan.com/Content/theme/img/technologies/nuget-icon.png" class="folder-icon" />
 
-                <a href="/project/cms/is4wfw">is4wfw</a>
+                <a href="/project/dev/neptuo.aspnet.navigation">Neptuo.AspNet.Navigation</a>
             </h2>
             <article>
                 <ul>
-                        <li>PHP-based web content management system.</li>
+                        <li>Model (class) based navigation and routing for ASP.NET MVC.</li>
 
+                        <li>
+                            <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0"><span>Licensed under Apache License, Version 2.0.</span></a>
+                        </li>
 
 
                         <li>
                             Source code at
-                            <a target="_blank" href="https://github.com/maraf/PHP-WebFramework"><span>
-https://github.com/maraf/PHP-WebFramework</span></a>.
+                            <a target="_blank" href="https://github.com/neptuo/AspNet.Navigation"><span>
+https://github.com/neptuo/AspNet.Navigation</span></a>.
                         </li>
                     
 
-                </ul>
-            </article>
-            <div class="clear"></div>
-        </div>
-        <div class="folder" data-search="template engine">
-            <h2 class="folder-heading">
-
-                <a href="/project/cms/templateengine">Template Engine</a>
-            </h2>
-            <article>
-                <ul>
                         <li>
-      C# based web application with both server-side and client-size view rendering from shared source.
-    </li>
-
-
-
-                        <li>
-                            Source code at
-                            <a target="_blank" href="https://github.com/neptuo/TemplateEngine"><span>
-https://github.com/neptuo/TemplateEngine</span></a>.
+                            Current version on NuGet at <a target="_blank" href="https://www.nuget.org/packages/Neptuo.AspNet.Navigation"><span>nuget.org/packages/Neptuo.AspNet.Navigation</span></a>.
                         </li>
-                    
-
                 </ul>
             </article>
             <div class="clear"></div>
         </div>
 </div>
 
-    <script type="text/javascript">
-
-        var isHistorySupported = 'history' in window;
-        var isNewStateRequired = true;
-        var folders = document.querySelectorAll('.folder[data-search]');
-
-        var searchBox = document.getElementById('search');
-        searchBox.addEventListener('keydown', function (e) {
-            if (e.keyCode == 13)
-                e.preventDefault();
-        });
-        searchBox.addEventListener('keyup', function (e) {
-            var box = e.target;
-            var value = box.value.toLowerCase();
-            filterFolders(value);
-        });
-
-        if (isHistorySupported) {
-            window.addEventListener('popstate', function (e) {
-                var search = null;
-                if (e.state != null) {
-                    search = e.state.q;
-                }
-
-                searchBox.value = search;
-                filterFolders(search);
-            });
-        }
-
-        function filterFolders(value) {
-            if (value == null) {
-                for (var i = 0; i < folders.length; i++) {
-                    var folder = folders[i];
-                    folder.style.display = 'block';
-                }
-
-                return;
-            }
-
-            for (var i = 0; i < folders.length; i++) {
-                var folder = folders[i];
-
-                var name = folder.dataset['search'];
-                var index = name.indexOf(value);
-                if (index > -1)
-                    folder.style.display = 'block';
-                else
-                    folder.style.display = 'none';
-            }
-
-            if (value == '') {
-                isNewStateRequired = true;
-            }
-
-            if (isHistorySupported) {
-                var method = null;
-                if (isNewStateRequired) {
-                    method = window.history.pushState;
-                    isNewStateRequired = false;
-                }
-                else {
-                    method = window.history.replaceState;
-                }
-
-                method.call(window.history, { q: value }, "Searching '" + value + "'", getSearchUrl(value));
-            }
-        }
-
-        function getSearchUrl(value) {
-            var origin = null;
-            if ('origin' in window.location) {
-                origin = window.location.origin;
-            } else {
-                origin = window.location.protocol + "//" + window.location.host;
-            }
-
-            var url = window.location.origin + window.location.pathname
-            if (value != "") {
-                url += "?q=" + encodeURIComponent(value);
-            }
-
-            return url;
-        }
-
-        var queryString = window.location.search;
-        if (queryString != '') {
-            var params = queryString.substr(1, queryString.length - 1).split('&');
-            for (var i = 0; i < params.length; i++) {
-                var keyValue = params[i].split('=');
-                if (keyValue[0] == 'q') {
-                    var value = keyValue[1];
-                    if (value != '') {
-                        searchBox.value = value;
-                        filterFolders(value);
-                    }
-                }
-            }
-        }
-
-    </script>
 
 
         </form>
