Clear after webs preview.

--- a/index.html
+++ b/index.html
@@ -255,6 +255,8 @@
              </a>
 
 
+        <div class="clear"></div>
+
         <p>
             Also we have created some sites (this one included) using pre-generated static sites, hosted on free hostings and periodically or manualy updated.
             These sites uses advanced WebApplication technologies, like ASP.NET, but only static HTML &amp; assets are published on production server.
