Add Productivity.SolutionRunner v1.5.

--- a/project/desktop/solutionrunner/index.html
+++ b/project/desktop/solutionrunner/index.html
@@ -101,7 +101,7 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                         </li>
                     
                         <li>
-                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.4 to download</a>.
+                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.5 to download</a>.
                         </li>
 
                 </ul>
@@ -137,6 +137,24 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                 <div class="folder">
                     <h2 class="folder-heading">Version history</h2>
                     <ul class="version">
+                            <li>
+                                <strong>v1.5</strong>
+                                    <ul>
+
+                                            <li>
+                                                Added support for starting after login to the Windows.
+                                            </li>
+                                            <li>
+                                                Added message displaying current application status (initializing, searching, &#39;nothing found&#39;, etc).
+                                            </li>
+                                            <li>
+                                                Added options for shortening display path to found solution files. It can whole path, directory path or last directory name.
+                                            </li>
+                                            <li>
+                                                Fix: Missing favorite items after deleting all text.
+                                            </li>
+                                    </ul>
+                            </li>
                             <li>
                                 <strong>v1.4</strong>
                                     <ul>
